--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,6 @@
   <body>
     <p>Welcome to chat app</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      socket.on("connect", () => {
-        console.log("connected to server");
-      });
-      socket.on("disconnect", () => {
-        console.log("disconnected from server");
-      });
-    </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
