--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <p>Welcome to chat app</p>
+
+    <ol id="messages"></ol>
+
+    <form id="message-form">
+      <input type="text" name="message" placeholder="message" />
+      <button>Send</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/lib/jquery-3.4.1.min.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
