--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <input type="text" name="message" placeholder="message" />
       <button>Send</button>
     </form>
-
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.4.1.min.js"></script>
     <script src="/js/index.js"></script>
