--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <p>Welcome to chat app</p>
+  <body class="chat">
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users"></div>
+    </div>
+    <div class="chat__main">
+      <ol id="messages" class="chat_messages"></ol>
+      <div class="chat__footer">
+        <form id="message-form">
+          <input
+            type="text"
+            name="message"
+            placeholder="message"
+            autofocus
+            autocomplete="off"
+          />
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send location</button>
+      </div>
+    </div>
 
-    <ol id="messages"></ol>
-
-    <form id="message-form">
-      <input type="text" name="message" placeholder="message" />
-      <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.4.1.min.js"></script>
     <script src="/js/index.js"></script>
