--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
     <script src="/js/index.js"></script>
   </body>
 </html>
