--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/style.css" />
+
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
   <body class="chat">
@@ -13,7 +12,7 @@
       <div id="users"></div>
     </div>
     <div class="chat__main">
-      <ol id="messages" class="chat_messages"></ol>
+      <ol id="messages" class="chat__messages"></ol>
       <div class="chat__footer">
         <form id="message-form">
           <input
@@ -34,8 +33,10 @@
       <div class="message__title">
         <h4>{{from}}</h4>
         <span>{{createdAt}}</span>
+
         <div class="message__body">
-          <p>{{text}}</p>
+
+          <p><br>{{text}}</p>
         </div>
       </div>
             </li>
