--- a/public/index.html
+++ b/public/index.html
@@ -2,64 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Join | Chatapp</title>
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Document</title>
   </head>
-  <body class="chat">
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="users"></div>
-    </div>
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages"></ol>
-      <div class="chat__footer">
-        <form id="message-form">
-          <input
-            type="text"
-            name="message"
-            placeholder="message"
-            autofocus
-            autocomplete="off"
-          />
-          <button>Send</button>
-        </form>
-        <button id="send-location">Send location</button>
-      </div>
-    </div>
-
-    <script id="message-template" type="text/template">
-            <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-
-        <div class="message__body">
-
-          <p><br>{{text}}</p>
+  <body class="centered-form">
+    <div class="centered-form__form">
+      <form action="/chat.html">
+        <div class="form-field">
+          <h3>Join Chat</h3>
         </div>
-      </div>
-            </li>
-    </script>
-
-    <script id="location-message-template" type="text/template">
-            <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-        <div class="message__body">
-          <p>
-            <a href="{{url}}" target="_blank">My current location</a>
-          </p>
+        <div class="form-field">
+          <label>Display Name</label>
+          <input type="text" name="name" autofocus />
         </div>
-      </div>
-            </li>
-    </script>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/lib/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script>
-    <script src="/js/index.js"></script>
+        <div class="form-field">
+          <label>Room Name</label>
+          <input type="text" name="room" />
+        </div>
+        <div class="form-field">
+          <button>Join</button>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
