--- a/public/chat.html
+++ b/public/chat.html
@@ -61,6 +61,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.4.1.min.js"></script>
+    <script src="/js/lib/deparam.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script>
     <script src="/js/chat.js"></script>
