add template for location

--- a/public/chat.html
+++ b/public/chat.html
@@ -77,6 +77,20 @@
         </div>
             </li>
     </script>
+    <script id="location-other-template" type="text/template">
+            <li class="message-right">
+      <div class="message__title">
+        <h4>{{from}}</h4>
+        <span>{{createdAt}}</span>
+
+      </div>
+      <div class="message__body">
+          <p>
+            <a href="{{url}}" target="_blank">My current location</a>
+          </p>
+        </div>
+            </li>
+    </script>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/jquery-3.4.1.min.js"></script>
