--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
               <input type="text" name="room" />
             </div>
             <div class="form-field">
+              <input type="text" name="image" placeholder="IMG-URL" />
+            </div>
+            <div class="form-field">
               <button>Join</button>
             </div>
           </form>
